--- a/TestMaven2/.project
+++ b/TestMaven2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TestMaven2</name>
+	<name>TestSeleniumWebdriver</name>
 	<comment></comment>
 	<projects>
 	</projects>
